[package]
name = "yew-circle-packing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"


[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
tracing-test = "0.2.1"
assert_approx_eq = "1.0.0"