[package]
name = "circle-packer"
version = "0.1.1"
edition = "2021"
description = "Implements a circle packing algorithm: https://en.wikipedia.org/wiki/Circle_packing_theorem"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
serde = { version = "1.0", optional = true }


[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
tracing-test = "0.2.1"
assert_approx_eq = "1.0.0"